feat: Integrate Google Mobile Ads and enhance UI with GPS signal indicator

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   # Local storage
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  google_mobile_ads: ^7.0.0
 
 dev_dependencies:
   flutter_test:
