--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,17 +25,27 @@ dependencies:
   google_mobile_ads: ^7.0.0
   intl: ^0.19.0
   provider: ^6.1.2
+  fl_chart: ^0.67.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^6.0.0
-
-  # Hive codegen
+  flutter_lints: ^6.0.0  
   hive_generator: ^2.0.1
   build_runner: ^2.4.6
   analyzer: ^6.4.1
+
+  flutter_launcher_icons: "^0.14.4"
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: assets/icon/icon.png
+  adaptive_icon_background: "#000000"
+  adaptive_icon_foreground: assets/icon/icon.png
+
+  
 
 
 flutter:
