feat: Update app icons and remove splash screen
- Updated app icons in the iOS project with new images.
- Refactored HomeShell to remove ad-related code and implement a responsive layout with NavigationRail for wider screens.
- Changed the main entry point to HomeShell instead of SplashScreen.
- Enhanced SettingsPage with a new layout and added a link to the privacy policy.
- Removed the SplashScreen widget and its associated logic.
- Updated the trips_page.dart to improve UI elements and removed unused metric widgets.
- Updated project identifiers for macOS and Linux platforms.
- Added url_launcher dependency for handling external links.
- Updated pubspec.yaml for versioning and added adaptive icon background.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,8 +5,11 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <!-- Required for Google Mobile Ads -->
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
+
     <application
-        android:label="speedy"
+        android:label="Speedy"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
