--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: speedy
 description: "Offline GPS speedometer with trip history"
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: '>=3.3.0 <4.0.0'
@@ -26,6 +26,7 @@ dependencies:
   intl: ^0.19.0
   provider: ^6.1.2
   fl_chart: ^0.67.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
@@ -42,8 +43,8 @@ flutter_launcher_icons:
   android: true
   ios: true
   image_path: assets/icon/icon.png
-  adaptive_icon_background: "#000000"
   adaptive_icon_foreground: assets/icon/icon.png
+  adaptive_icon_background: "#ffffff"
 
   
 
